<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Music Player</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="playpause_button_content_description">Play and Pause Button</string>
    <string name="stop_button_content_description">Stop Button</string>
    <string name="fastforward_button_content_description">Fast-Forward Button</string>
    <string name="rewind_button_content_description">Rewind Button</string>
    <string name="repeat_button_content_description">Repeat Button</string>
    <string name="replay_button_content_description">Replay Button</string>
    <string name="initial_time">00:00</string>

</resources>